fix extra space on first menu

--- a/src/_scss/layouts/default/header/nav/_megaMenu.scss
+++ b/src/_scss/layouts/default/header/nav/_megaMenu.scss
@@ -81,6 +81,10 @@
         background-color: $color-white;
       }
     }
+    
+    .undo__bottom-padding {
+      margin-bottom: 0;
+    }
 
     .dropdown-section {
       position: relative;
